# chicken-coop

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  README.md  index.html
config/: nginx.conf
deploy/: README.md
src/: about.rs  app.rs  console.rs  main.rs
src/backend/: mod.rs  pkg.rs  vuln.rs
src/backend/data/: mod.rs
src/components/: backend.rs  deps.rs  mod.rs
src/pages/: chicken.rs  index.rs  mod.rs  package.rs  vulnerability.rs
src/pages/package/: deps.rs  lookup.rs  mod.rs  search.rs
src/pages/package/lookup/: maven.rs  mod.rs
src/pages/sbom/: inspect.rs  mod.rs  upload.rs
