[package]
name = "chicken-coop"
version = "0.1.0"
edition = "2021"
license = "Apache-2"

[dependencies]
chrono = { version = "0.4", features = ["wasmbind"] }
gloo-net = "0.2"
gloo-utils = "0.1"
log = "0.4"
packageurl = "0.3"
patternfly-yew = { version = "0.4.1", features = ["icons-fab", "tree"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.24"
thiserror = "1"
url = "2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = { version = "0.20", features = ["csr"] }
yew-hooks = "0.2"
yew-more-hooks = { version = "0.1.2", features = ["yew-hooks"] }
yew-nested-router = "0.2.1"
cyclonedx-bom = "0.4"

trust-api-model = "0.1.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "DataTransfer",
    "File",
]

[patch.crates-io]
#yew-nested-router = { path = "../yew-nested-router" }
#yew-nested-router = { git = "https://github.com/ctron/yew-nested-router", rev = "9689db446dee7030325884df768d0c2e84f353d6" }
yew-more-hooks = { git = "https://github.com/ctron/yew-more-hooks", rev = "9f39517aabe25cfadae48f2d225daa1c3a608c20" }
#yew-more-hooks = { path = "../yew-more-hooks" }
patternfly-yew = { git = "https://github.com/ctron/patternfly-yew", rev = "e5b48d19a0e871645dc14c263c27e5c1c0346012" }
#patternfly-yew = { path = "../patternfly-yew" }

trust-api-model = { git = "https://github.com/xkcd-2347/trust-api", rev = "7e6ac991a84a914896e9ffa874952f4bb769d750" }
#trust-api-model = { path = "../trust-api/trust-api-model"}
